force-app/main/default/objects/righteous__LightningActionCondition__c/righteous__LightningActionCondition__c.object-meta.xml
<CustomObject>
    <label>Lightning Action Condition</label>
    <nameField>
        <displayFormat>#{000000}</displayFormat>
        <label>Lightning Action Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning Action Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>