force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>righteous__Apex_Class_Name__c</fullName>
    <description>Provide Name of Global Apex class which should be invoked at the time of evaluating this Condition. Given Apex class must have implemented &quot;ILightningActionConditionValidator&quot; interface</description>
    <inlineHelpText>Provide Name of Global Apex class which should be invoked at the time of evaluating this Condition. Given Apex class must have implemented &quot;ILightningActionConditionValidator&quot; interface</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>