force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Apex_Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>righteous__Apex_Query_Fields__c</fullName>
    <description>Comma separated Field Names of object. Field API Name must be from the Object Selected for current condition.

System will already retrieve record with given fields and provide the values in Class Method. So Developer can avoid writing SOQL Apex method.</description>
    <inlineHelpText>Comma separated Field Names of object. Field API Name must be from the Object Selected for current condition.

System will already retrieve record with given fields and provide the values in Class Method. So Developer can avoid writing SOQL Apex method.</inlineHelpText>
    <label>Apex Query Fields</label>
    <type>TextArea</type>
</CustomField>