force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Index__c.field-meta.xml
<CustomField>
    <fullName>righteous__Index__c</fullName>
    <description>Unique Index number for related Action / Group. This Index value can be used in Condition Expression String.</description>
    <inlineHelpText>Unique Index number for related Action / Group. This Index value can be used in Condition Expression String.</inlineHelpText>
    <label>Index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>