force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Label__c.field-meta.xml
<CustomField>
    <fullName>righteous__Label__c</fullName>
    <description>Label is used for internal identification. Provide logical name of condition. e.g., Is Opportunity is Closed Won. 

In case any error occurs in evaluating this condition, system will use Label in exception message. So Admin can identify failing condition.</description>
    <inlineHelpText>Label is used for internal identification. Provide logical name of condition. e.g., Is Opportunity is Closed Won.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>