force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__LightningActionGroupId__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningActionGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate current Lightning Action Condition with any Lightning Action or Lightning Action Group. You must associate condition with either Action or Group but not both.</description>
    <inlineHelpText>Associate current Lightning Action Condition with any Lightning Action or Lightning Action Group</inlineHelpText>
    <label>Lightning Action Group</label>
    <referenceTo>righteous__LightningActionGroup__c</referenceTo>
    <relationshipLabel>Lightning Action Group Conditions</relationshipLabel>
    <relationshipName>LightningActionGroupConditions</relationshipName>
    <type>Lookup</type>
</CustomField>