force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__LightningActionId__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate current Lightning Action Condition with any Lightning Action or Lightning Action Group. You must associate condition with either Action or Group but not both.</description>
    <inlineHelpText>Associate current Lightning Action Condition with any Lightning Action or Lightning Action Group</inlineHelpText>
    <label>Lightning Action</label>
    <referenceTo>righteous__LightningAction__c</referenceTo>
    <relationshipLabel>Lightning Action Conditions</relationshipLabel>
    <relationshipName>LightningActionConditions</relationshipName>
    <type>Lookup</type>
</CustomField>