force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Object__c.field-meta.xml
<CustomField>
    <fullName>righteous__Object__c</fullName>
    <description>Select Object API Name of the record you wish to evaluate. You must use Object API Name matching with associated Lightning Action Configuration or Current User.</description>
    <inlineHelpText>Select Object API Name of the record you wish to evaluate. You must use Object API Name matching with associated Lightning Action Configuration or Current User.</inlineHelpText>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <label>Current User</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>