force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Object_Field__c.field-meta.xml
<CustomField>
    <fullName>righteous__Object_Field__c</fullName>
    <description>API Name of Field from selected Object.</description>
    <inlineHelpText>API Name of Field from selected Object.</inlineHelpText>
    <label>Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>