force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Operator__c.field-meta.xml
<CustomField>
    <fullName>righteous__Operator__c</fullName>
    <description>Select Operator for logical validation</description>
    <inlineHelpText>Select Operator for logical validation</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>