force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>righteous__Target_Field__c</fullName>
    <description>Provide the API Name of Field against which value of &quot;Object Field&quot; should be compared.</description>
    <inlineHelpText>Provide the API Name of Field against which value of &quot;Object Field&quot; should be compared.</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>