force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>righteous__Target_Type__c</fullName>
    <description>Select Type against &quot;Object Field&quot; should be validated. 
&quot;Value&quot; compares &quot;Object Field&quot; with static value provided in &quot;Target Value&quot;.
&quot;Field&quot; compares &quot;Object Field&quot; with &quot;Target Field&quot; of same record.</description>
    <inlineHelpText>Select Type against &quot;Object Field&quot; should be validated. 
&quot;Value&quot; compares &quot;Object Field&quot; with static value provided in &quot;Target Value&quot;.
&quot;Field&quot; compares &quot;Object Field&quot; with &quot;Target Field&quot; of same record.</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>