force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>righteous__Target_Value__c</fullName>
    <description>Provide predefined/static value against which value of &quot;Object Field&quot; should be compared.</description>
    <inlineHelpText>Provide predefined/static value against which value of &quot;Object Field&quot; should be compared.</inlineHelpText>
    <label>Target Value</label>
    <type>TextArea</type>
</CustomField>