force-app/main/default/objects/righteous__LightningActionCondition__c/fields/righteous__Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>righteous__Validation_Type__c</fullName>
    <description>Select Variant of Validation. 

Select Field Validation if you wish to check Object&apos;s field with value or any other field value of same record.

Select Apex Validation in case you wish to implement custom condition validation program in Apex Class. You must create public/global Apex Class and implement Interface.</description>
    <label>Validation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Validation</fullName>
            </value>
            <value>
                <fullName>Apex Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>