force-app/main/default/objects/righteous__LightningActionCondition__c/validationRules/righteous__Action_and_Group_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>righteous__Action_and_Group_Blank</fullName>
    <active>true</active>
    <description>validate if neither Lightning Action nor Lightning Action Group is selected.</description>
    <errorConditionFormula>ISBLANK( righteous__LightningActionId__c ) &amp;&amp; ISBLANK( righteous__LightningActionGroupId__c)</errorConditionFormula>
    <errorMessage>Please select Lightning Action or Lightning Action Group for record.</errorMessage>
</ValidationRule>