force-app/main/default/objects/righteous__LightningActionCondition__c/validationRules/righteous__Apex_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>righteous__Apex_Validation</fullName>
    <active>true</active>
    <description>Validate required fields for Apex type validation</description>
    <errorConditionFormula>AND(ISPICKVAL( righteous__Validation_Type__c , &apos;Apex Validation&apos;), OR(ISBLANK( righteous__Apex_Class_Name__c ), ISBLANK( righteous__Apex_Query_Fields__c ), ISBLANK( TEXT(righteous__Object__c ))))</errorConditionFormula>
    <errorMessage>Please provide values for Apex Class Name and Apex Query Fields  for Apex Validation type.</errorMessage>
</ValidationRule>