force-app/main/default/objects/righteous__LightningActionCondition__c/validationRules/righteous__Field_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>righteous__Field_Validation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( righteous__Validation_Type__c,&apos;Field Validation&apos; ) &amp;&amp; 
OR(ISNULL(righteous__Object_Field__c), ISPICKVAL(righteous__Operator__c,&apos;&apos;), ISPICKVAL(righteous__Target_Type__c,&apos;&apos;))</errorConditionFormula>
    <errorMessage>Please provide values for Object Field, Operator and Target Type is required when Field Validation type is selected.</errorMessage>
</ValidationRule>