force-app/main/default/objects/righteous__LightningActionCondition__c/listViews/allSelection_LightningActionCondition.listView-meta.xml
<ListView>
    <fullName>allSelection_LightningActionCondition</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>